2009-07-07  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/llvmHeaders.hpp
	Include llvm/LLVMContext.h used by getGlobalContext()
	when llvm version are 2.6 or later.
	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
	(SharkCompiler::SharkCompiler): Pass the LLVMContext returned 
	from getGlobalContext() to the new Module constructor
	when llvm version are 2.6 or later to handle LLVM API change.

2009-07-03  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkEntry.hpp
	(SharkEntry::print_statistics): Removed.
	* ports/hotspot/src/share/vm/shark/sharkEntry.cpp: Removed.

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
	(SharkCompiler::compile_method): Save location of native code
	across the call to ciEnv::register_method (which frees the buffer
	blob it's in), and inline what was SharkEntry::print_statistics.

	* ports/hotspot/src/share/vm/includeDB_shark: Updated.

2009-06-26  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
	(SharkCompiler::SharkCompiler): Moved LLVM multithreading
	initialization from SharkFunction::initialize.
	* ports/hotspot/src/share/vm/shark/sharkFunction.cpp
	(SharkFunction::initialize): Moved LLVM multithreading
	initialization to SharkCompiler::SharkCompiler.

2009-06-25  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkRuntime.cpp
	(SharkRuntime::monitorexit_C): Remove unnecessary lock clear.

2009-06-23  Matthias Klose  <doko@ubuntu.com>

	* ports/hotspot/src/share/vm/shark/llvmHeaders.hpp: Fix header location.

2009-06-23  Xerxes Rånby  <xerxes@zafena.se>

	PR icedtea/353
	* ports/hotspot/src/share/vm/shark/llvmHeaders.hpp
	Include llvm/Support/Threading.h and llvm/Target/TargetSelect.h
	used by llvm_start_multithreaded() and InitializeNativeTarget()
	when llvm version are 2.6 or later.
	* ports/hotspot/src/share/vm/shark/llvmValue.hpp
	(jfloat_constant): Return llvm::Constant* when llvm